Add meta data to head and connect css file

--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
             </ul>
         </nav>  
     </header>
+    <section>
+        Hero Image
+    </section>
+    <section>
+        Quick Bio
+    </section>
+    <section>
+        Testimonials
+        <div>
+            <p></p>
+        </div>
+        <div>
+            <p></p>
+        </div>
+        <div>
+            <p></p>
+        </div>
+    </section>
    
 </body>
 </html>
