--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class>
-               <h1>Climate Circles</h1>
+        <a href="index.html">
+               <h1 id="logo">Climate Circles</h1>
         </a>
         <nav>
             <ul>
