--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                <h1 id="logo">Climate Circles</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
                     <a href="#">Contact</a>
                 </li>
