--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <header>
         <a href="index.html">
-               <h1 id="logo">Climate Circles</h1>
+               <div id="logo">
+                <img src="assets/images/logo.jpg" alt="Climate Circles logo">
+               </div>
         </a>
         <nav>
             <ul id="menu">
@@ -30,7 +32,7 @@
         </nav>  
     </header>
     <section>
-        Hero Image
+        <div id="hero-image"></div>
     </section>
     <section>
         Quick Bio
