Change hero image

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     </header>
     <section>
         <div id="hero-image"></div>
+        <div id="cover-text"></div>
+        <h2></h2>
     </section>
     <section>
         Quick Bio
