Add cover text and style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <a href="index.html">
                <div id="logo">
-                <img src="assets/images/logo.jpg" alt="Climate Circles logo">
+                <img src="assets/images/logo1.png" alt="Climate Circles logo">
                </div>
         </a>
         <nav>
@@ -32,9 +32,12 @@
         </nav>  
     </header>
     <section>
-        <div id="hero-image"></div>
-        <div id="cover-text"></div>
-        <h2></h2>
+        <div id="hero-image">
+        <div id="cover-text">
+            <h3>“Knowing that you love the earth changes you, activates you to defend and protect and celebrate. But when you feel that the earth loves you in return,
+                that feeling transforms the relationship from a one-way street into a sacred bond.” ― Robin Wall Kimmerer, Bradining Sweetgrass</h3>
+        </div>
+    </div>
     </section>
     <section>
         Quick Bio
