Add bio structure and style

--- a/index.html
+++ b/index.html
@@ -39,8 +39,21 @@
         </div>
     </div>
     </section>
-    <section>
-        Quick Bio
+    <section id="bio">
+            <h2>Meet Alexandra</h2>
+        <hr>
+        <div id="left-bio">
+            <div class="left-bio-text">
+             <p>Alexandra Brinzac is a being that journeys through life with an open heart and a deep love for all that is moving. Her background is a BA in psychology, with 
+                  a master degree in experiential psychotherapy. During her last 4 years, her journey was paved with linking psychology and ecopsychology together. Therefore,
+                  you can find her hosting climate circles, deep ecology and The Work That Reconnects workshops and gathering people for forest bathing sessions.
+             </p>
+            </div>
+        <div id="right-bio">
+            <div class="right-bio-image"></div>
+        </div>
+       
+        </div>
     </section>
     <section>
         Testimonials
