Change style to the bio section

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </div>
     </section>
     <section id="bio">
-            <h2>Meet Alexandra</h2>
-        <hr>
+        <h2 class="meet">Meet Alexandra</h2>
+              <hr>
         <div id="left-bio">
             <div class="left-bio-text">
              <p>Alexandra Brinzac is a being that journeys through life with an open heart and a deep love for all that is moving. Her background is a BA in psychology, with 
@@ -49,10 +49,11 @@
                   you can find her hosting climate circles, deep ecology and The Work That Reconnects workshops and gathering people for forest bathing sessions.
              </p>
             </div>
+            </div>
         <div id="right-bio">
-            <div class="right-bio-image"></div>
+            <div id="circle-container">
+             <img class="alexandra" src="assets/images/alexandra3.jpg" alt="">
         </div>
-       
         </div>
     </section>
     <section>
