Add basic structure to meet-up times section

--- a/index.html
+++ b/index.html
@@ -48,25 +48,33 @@
                   a master degree in experiential psychotherapy. During her last 4 years, her journey was paved with linking psychology and ecopsychology together. Therefore,
                   you can find her hosting climate circles, deep ecology and The Work That Reconnects workshops and gathering people for forest bathing sessions.
              </p>
-            </div>
-            </div>
+        </div>
+    </div>
         <div id="right-bio">
             <div id="circle-container">
-             <img class="alexandra" src="assets/images/alexandra3.jpg" alt="">
+             <img class="alexandra" src="assets/images/alexandra3.jpg" alt="Alexandra Brinzac">
         </div>
-        </div>
+    </div>
     </section>
-    <section>
-        Testimonials
+    <section id="meet-up">
+        <h2 class="meet">Meet-up Times</h2>
+              <hr>
         <div>
-            <p></p>
+            <h2>The Work That Reconnects</h2>
+            <h3>When: Tuesday 18:00</h3>
+            <h3>Location: The Legacy Bucharest</h3>
         </div>
         <div>
-            <p></p>
+            <h2>Climate Circles</h2>
+            <h3>When: Thursday 18:00</h3>
+            <h3>Location: Online</h3>
         </div>
         <div>
-            <p></p>
+            <h2>Forest Bathing</h2>
+            <h3>When: Saturday 12:00</h3>
+            <h3>Location: Baneasa Forest</h3>
         </div>
+
     </section>
     <footer>
         social links
