Add style to the meet-up section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </div>
         <div id="right-bio">
-            <div id="circle-container">
+            <div>
              <img class="alexandra" src="assets/images/alexandra3.jpg" alt="Alexandra Brinzac">
         </div>
     </div>
@@ -59,20 +59,25 @@
     <section id="meet-up">
         <h2 class="meet">Meet-up Times</h2>
               <hr>
-        <div>
-            <h2>The Work That Reconnects</h2>
-            <h3>When: Tuesday 18:00</h3>
-            <h3>Location: The Legacy Bucharest</h3>
-        </div>
-        <div>
-            <h2>Climate Circles</h2>
-            <h3>When: Thursday 18:00</h3>
-            <h3>Location: Online</h3>
-        </div>
-        <div>
-            <h2>Forest Bathing</h2>
-            <h3>When: Saturday 12:00</h3>
-            <h3>Location: Baneasa Forest</h3>
+        <div id="meet-up-times">
+           <img src="assets/images/plant.jpg" alt="">
+            <img src="assets/images/view.jpg" alt="">
+            <img class="forest" src="assets/images/forest.jpg" alt="Forest">
+            <div id="meet-up-reconnect">
+                <h2>The Work That Reconnects</h2>
+                <h3>When: Tuesday 18:00</h3>
+                <h3>Location: The Legacy Bucharest</h3>
+            </div>
+            <div id="meet-up-climate">
+                <h2>Climate Circles</h2>
+                <h3>When: Thursday 18:00</h3>
+                <h3>Location: Online</h3>
+            </div>
+            <div id="meet-up-forest">
+                <h2>Forest Bathing</h2>
+                <h3>When: Saturday 12:00</h3>
+                <h3>Location: Baneasa Forest</h3>
+            </div>
         </div>
 
     </section>
