Add basic structure to social links section

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <h2 class="meet">Meet-up Times</h2>
               <hr>
         <div id="meet-up-times">
-           <img src="assets/images/plant.jpg" alt="">
-            <img src="assets/images/view.jpg" alt="">
-            <img class="forest" src="assets/images/forest.jpg" alt="Forest">
+           <img src="assets/images/girl-hugging-tree.jpg" alt="">
+            <img src="assets/images/hands-plant.jpg" alt="">
+            <img class="forest" src="assets/images/forest3.jpg" alt="Forest">
             <div id="meet-up-reconnect">
                 <h2>The Work That Reconnects</h2>
                 <h3>When: Tuesday 18:00</h3>
@@ -82,7 +82,17 @@
 
     </section>
     <footer>
-        social links
+        <ul>
+            <li>
+                <a href=""></a>
+            </li>
+            <li>
+                <a href=""></a>
+            </li>
+            <li>
+                <a href=""></a>
+            </li>
+        </ul>
     </footer>
    
 </body>
