--- a/index.html
+++ b/index.html
@@ -82,18 +82,31 @@
 
     </section>
     <footer>
-        <ul>
-            <li>
-                <a href=""></a>
-            </li>
-            <li>
-                <a href=""></a>
-            </li>
-            <li>
-                <a href=""></a>
-            </li>
-        </ul>
+        <div class="row">
+            <div class="contact">
+                <h4>Contact Info</h4>
+                <p>Email: alexandra.brinzac@gmail.com</p>
+                <p>Telephone: 07432134322</p>
+            </div> 
+            <div class="social-links">
+                <h4>See more of her work on:</h4>
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener"
+                      aria-label="Connect with her on Instagram"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener"
+                      aria-label="Connect with her on Facebook"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Connect with her on Youtube"><i class="fa-brands fa-square-youtube"></i></a>
+                </li>
+            </div>
+        </div> 
     </footer>
    
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/dddc694189.js" crossorigin="anonymous"></script>
 </body>
 </html>
