Add basic structure to testimonials section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="#">Contact</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -42,24 +42,35 @@
     <section id="bio">
         <h2 class="meet">Meet Alexandra</h2>
               <hr>
+        <span>
         <div id="left-bio">
             <div class="left-bio-text">
              <p>Alexandra Brinzac is a being that journeys through life with an open heart and a deep love for all that is moving. Her background is a BA in psychology, with 
                   a master degree in experiential psychotherapy. During her last 4 years, her journey was paved with linking psychology and ecopsychology together. Therefore,
                   you can find her hosting climate circles, deep ecology and The Work That Reconnects workshops and gathering people for forest bathing sessions.
              </p>
+           </div>
         </div>
-    </div>
-        <div id="right-bio">
-            <div>
+            <div id="right-bio">
              <img class="alexandra" src="assets/images/alexandra3.jpg" alt="Alexandra Brinzac">
+           </div>
+        </span>
+    </section>
+    <section class="testimonials">
+        <div class="testimonial">
+          <p></p>
         </div>
-    </div>
+        <div class="testimonial"> 
+          <p></p>
+        </div>
+        <div class="testimonial">
+          <p></p>
+        </div>
     </section>
     <section id="meet-up">
         <h2 class="meet">Meet-up Times</h2>
               <hr>
-        <div id="meet-up-times">
+        <span id="meet-up-times">
            <img src="assets/images/girl-hugging-tree.jpg" alt="">
             <img src="assets/images/hands-plant.jpg" alt="">
             <img class="forest" src="assets/images/forest3.jpg" alt="Forest">
@@ -78,31 +89,27 @@
                 <h3>When: Saturday 12:00</h3>
                 <h3>Location: Baneasa Forest</h3>
             </div>
-        </div>
+        </span>
 
     </section>
     <footer>
-        <div class="row">
-            <div class="contact">
+        <div class="footer-container">
+            <div class="left-col">
                 <h4>Contact Info</h4>
                 <p>Email: alexandra.brinzac@gmail.com</p>
                 <p>Telephone: 07432134322</p>
             </div> 
-            <div class="social-links">
+            <div class="right-col">
                 <h4>See more of her work on:</h4>
-                <li>
+                <div class="social-links">
                     <a href="https://instagram.com" target="_blank" rel="noopener"
                       aria-label="Connect with her on Instagram"><i class="fa-brands fa-instagram"></i></a>
-                </li>
-                <li>
                     <a href="https://facebook.com" target="_blank" rel="noopener"
                       aria-label="Connect with her on Facebook"><i class="fa-brands fa-facebook"></i></a>
-                </li>
-                <li>
                     <a href="https://youtube.com" target="_blank" rel="noopener"
                     aria-label="Connect with her on Youtube"><i class="fa-brands fa-square-youtube"></i></a>
-                </li>
-            </div>
+                </div>
+            </div>   
         </div> 
     </footer>
    
