Add styles to the about workshops section

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <h2 class="meet">Meet Alexandra</h2>
               <hr>
         <span>
-        <div id="left-bio">
-            <div class="left-bio-text">
+        <div id="right-bio">
+            <div class="right-bio-text">
              <p>Alexandra Brinzac is a being that journeys through life with an open heart and a deep love for all that is moving. Her background is a BA in psychology, with 
                   a master degree in experiential psychotherapy. During her last 4 years, her journey was paved with linking psychology and ecopsychology together. Therefore,
                   you can find her hosting climate circles, deep ecology and The Work That Reconnects workshops and gathering people for forest bathing sessions.
              </p>
            </div>
         </div>
-            <div id="right-bio">
+            <div id="left-bio">
              <img class="alexandra" src="assets/images/alexandra3.jpg" alt="Alexandra Brinzac">
            </div>
         </span>
@@ -82,9 +82,9 @@
         <h2 class="meet">Meet-up Times</h2>
               <hr>
         <span id="meet-up-times">
-           <img src="assets/images/girl-hugging-tree.jpg" alt="">
-            <img src="assets/images/hands-plant.jpg" alt="">
-            <img class="forest" src="assets/images/forest3.jpg" alt="Forest">
+           <img src="assets/images/girl-hugging-tree.jpg" alt="Girl hugging tree">
+            <img src="assets/images/hands-plant.jpg" alt="Hands through plants">
+            <img class="forest" src="assets/images/forest3.jpg" alt="Small waterfall in the forest">
             <div id="meet-up-reconnect">
                 <h2>The Work That Reconnects</h2>
                 <h3>When: Tuesday 18:00</h3>
