Add core structure to workshop section and some style

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
              <span>David</span></p>
           
             <img src="assets/images/women2-testimonial.jpg" alt="Brunette woman smiling">
-          <p>"Best Experience EVAAA!!!"
-            <span>Enthusiastic woman</span></p>
+          <p>"Alexandra is a gentle facilitator that guided me to a deeper relationship with Nature and all that is alive in me and around me."
+            <span>Diana</span></p>
         
         </div>
     </section>
@@ -82,9 +82,9 @@
         <h2 class="meet">Meet-up Times</h2>
               <hr>
         <span id="meet-up-times">
-           <img src="assets/images/girl-hugging-tree.jpg" alt="Girl hugging tree">
-            <img src="assets/images/hands-plant.jpg" alt="Hands through plants">
-            <img class="forest" src="assets/images/forest3.jpg" alt="Small waterfall in the forest">
+           <img src="assets/images/girl-hugging-tree.jpg" alt="Girl hugging tree" class="animate">
+            <img src="assets/images/hands-plant.jpg" alt="Hands through plants" class="animate">
+            <img class="forest" src="assets/images/forest3.jpg" alt="Small waterfall in the forest" class="animate">
             <div id="meet-up-reconnect">
                 <h2>The Work That Reconnects</h2>
                 <h3>When: Tuesday 18:00</h3>
