--- a/about.html
+++ b/about.html
@@ -32,11 +32,11 @@
         </nav>  
     </header>
     <section class="about-workshops">
-    <div class="about">
-        <img src="assets/images/hands.jpg" alt="">
-        <div class="inner-container">
-            <h1>About The Workshops</h1>
-            <p class="text">
+        <div class="about">
+            <img src="assets/images/hands.jpg" alt="">
+            <div class="inner-container">
+                <h1>About The Workshops</h1>
+                <p class="text">
                Make the clients want to read the about page through this text. I'm going back in a few more times and we are going back in the house for the day I have to get a job at work.
             </p>
             <div class="skills">
@@ -44,6 +44,44 @@
                 <span>CLimate Circles</span>
                 <span>Forest Bathing</span>
             </div>
+        </div>
+    </section>
+    <section id="workshop">
+        <img src="assets/images/the-work-that-reconnects.jpg" alt="" class="bg-image1">
+        <div class="wks-text">
+            <h2>The Work That Reconnects</h2>
+            <p>
+                Since 1978, The Work That Reconnects has inspired millions of people to listen to their hearts and work together for a better life on Earth, despite the general
+                 trend of worsening ecological conditions. To learn the basics of The Work That Reconnects and its unique approach, people participate in experiences of varying
+                 duration, from a few days to a few weeks. But, The Work That Reconnects extends far beyond these dedicated frameworks. The methods are widely used in schools,
+                 communities, organizations and campaigns for the environment and human rights.
+                 The central purpose of this work is to bring people into relationship with the world around them, empowering them to act and take part in "The Great Turning".
+                </p>
+            <h3>Benefits</h3>
+            <p>I am going to have a few more days and then we can get together for the first week and a few days before I was going back home and get a drink before the start up
+                I'm going back in a few more times and we are going back in the house for the day I have to get a job at work today so we are not able we do that and I can get a 
+                I'm going back in a few more times and we are going back in the house for a while and I am so sorry for the inconvenience I was thinking of you guys and your daddy 
+                I'm going back to sleep now I have to be in my office at least once a week or two before I get back 
+                I'm going back to sleep now I have a few things that can do for.</p>
+        </div>
+    </section>
+    <section id="workshop">
+        <img src="assets/images/climate-circles.JPG" alt="" class="bg-image">
+        <div class="wks-text">
+            <h2>Climate Circles</h2>
+            <p></p>
+            <h3>Benefits</h3>
+            <p>
+            </p>
+        </div>
+    </section>
+    <section id="workshop">
+        <img src="assets/images/hands-tree.jpg" alt="" class="bg-image">
+        <div class="wks-text">
+            <h2>Forest Bathing</h2>
+            <p></p>
+            <h3>Benefits</h3>
+            <p></p>
         </div>
     </section>
     <footer>
