Add style to workshop sections

--- a/about.html
+++ b/about.html
@@ -33,23 +33,23 @@
     </header>
     <section class="about-workshops">
         <div class="about">
-            <img src="assets/images/hands.jpg" alt="">
+            <img src="assets/images/hands.jpg" alt="Hands touching">
             <div class="inner-container">
                 <h1>About The Workshops</h1>
                 <p class="text">
                Make the clients want to read the about page through this text. I'm going back in a few more times and we are going back in the house for the day I have to get a job at work.
             </p>
             <div class="skills">
-                <span class="active-about">The Work That Reconnects</span>
-                <span>CLimate Circles</span>
-                <span>Forest Bathing</span>
+                <span><a href="#workshop1">The Work That Reconnects</a></span>
+                <span><a href="#workshop2">CLimate Circles</a></span>
+                <span><a href="#workshop3">Forest Bathing</a></span>
             </div>
         </div>
     </section>
-    <section id="workshop">
-        <img src="assets/images/the-work-that-reconnects.jpg" alt="" class="bg-image1">
-        <div class="wks-text">
-            <h2>The Work That Reconnects</h2>
+    <section id="workshop1">
+        <h2 class="reconnect-title">The Work That Reconnects</h2>
+        <div class="wks-container1">
+            <h3>About</h3>
             <p>
                 Since 1978, The Work That Reconnects has inspired millions of people to listen to their hearts and work together for a better life on Earth, despite the general
                  trend of worsening ecological conditions. To learn the basics of The Work That Reconnects and its unique approach, people participate in experiences of varying
@@ -64,25 +64,50 @@
                 I'm going back to sleep now I have to be in my office at least once a week or two before I get back 
                 I'm going back to sleep now I have a few things that can do for.</p>
         </div>
+        <img src="assets/images/the-work-that-reconnects.jpg" alt="People at the workshop" class="wks-image1">
     </section>
-    <section id="workshop">
-        <img src="assets/images/climate-circles.JPG" alt="" class="bg-image">
-        <div class="wks-text">
-            <h2>Climate Circles</h2>
-            <p></p>
-            <h3>Benefits</h3>
+    <section id="workshop2">
+        <h2 class="climate-title">Climate Circles</h2>
+        <img src="assets/images/climate-circles.JPG" alt="People at the workshop2" class="wks-image2">
+        <div class="wks-container2">
+            <h3>About</h3>
             <p>
+                A Climate Circle is a safe & empathetic space where you can express your feelings regarding the climate & ecological crisis, while exploring your inner responses and
+                 discovering your role in the Great Turning.
             </p>
+            <h3>Benefits</h3>
+           <ul>
+              <li>As the danger of climate crisis to our safety and health is becoming more and more clear, we increasingly need to talk about how this changes are impacting us</li>
+              <li>Normalizing and validating your feelings that may be too taboo and hard to express</li>
+              <li>Being part of a circle where you can feel seen & heard and with whom you can share similar values and enrich your perspectives and hope</li>
+              <li>The climate circle has a structure and acts as a container where you can explore your fear, ecoanxiety, anger, hopelessness, helplessness, grief, depression, while
+                   staying connected and grounded</li>
+              <li>You can discover somatic and mindfulness practices that help you maintain and enrich your resilience</li>
+           </ul>
         </div>
     </section>
-    <section id="workshop">
-        <img src="assets/images/hands-tree.jpg" alt="" class="bg-image">
-        <div class="wks-text">
-            <h2>Forest Bathing</h2>
-            <p></p>
+    <section id="workshop3">
+        <h2 class="forest-title">Forest Bathing</h2>
+        <div class="wks-container3">
+            <h3>About</h3>
+            <p>Forest Bathing is the English translation of the Japanese term “shinrin yoku” (shinrin=forest and yoku=bath). It is the practice of experiencing natural spaces, 
+                especially forests, in a slow, purposeful manner. Forest Bathing was developed in 1980s, and it has become an increasingly important part of Japanese preventive care and therapeutic healing, becoming an antidote
+                to our unnatural, indoor lives. Participants engage all their senses, paying attention to what is happening inside them, outside and how this worlds meet and interact. 
+                </p>
             <h3>Benefits</h3>
-            <p></p>
+            <ul>
+                <li>Strenghtens the Immune System</li>
+                <li>Reduce stress levels</li>
+                <li>Supports healthy blood pressure levels</li>
+                <li>Improves mood and alleviates anxiety</li>
+                <li>Enhances brain function and increases creativity</li>
+                <li>Increase natural killers cells</li>
+                <li>Faster recovery from illness</li>
+                <li>Cardiovascular and metabolic improvements</li>
+                <li>Reduction in asthma and eczema</li>
+            </ul>
         </div>
+        <img src="assets/images/hands-tree.jpg" alt="Hands hugging tree" class="wks-image3">
     </section>
     <footer>
         <div class="footer-container">
