Add core structure and style to the contact form

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
                 <li>
                     <a href="about.html" class="active">About</a>
@@ -37,7 +37,8 @@
             <div class="inner-container">
                 <h1>About The Workshops</h1>
                 <p class="text">
-               Make the clients want to read the about page through this text. I'm going back in a few more times and we are going back in the house for the day I have to get a job at work.
+                    The workshops are created like an experience for you to dwell deeper into the relationship with yourself, with the other humans, with the Earth and all its beings. 
+                    Discover more about the worshops and see what fits your needs and what calls your heart.
             </p>
             <div class="skills">
                 <span><a href="#workshop1">The Work That Reconnects</a></span>
@@ -58,11 +59,13 @@
                  The central purpose of this work is to bring people into relationship with the world around them, empowering them to act and take part in "The Great Turning".
                 </p>
             <h3>Benefits</h3>
-            <p>I am going to have a few more days and then we can get together for the first week and a few days before I was going back home and get a drink before the start up
-                I'm going back in a few more times and we are going back in the house for the day I have to get a job at work today so we are not able we do that and I can get a 
-                I'm going back in a few more times and we are going back in the house for a while and I am so sorry for the inconvenience I was thinking of you guys and your daddy 
-                I'm going back to sleep now I have to be in my office at least once a week or two before I get back 
-                I'm going back to sleep now I have a few things that can do for.</p>
+            <ul>
+                <li>A safe container to express and feel your feeling in regard to what is happening in the world</li>
+                <li>Finding new tools and practices that can help you in day to day life and in your relationships, communities and work life</li>
+                <li>Gaining new perspectives about the cultureship that is needed in this world</li>
+                <li>Covering your inner resources and your skills for The Great Turning</li>
+                <li>Building a strong network and creating a community of like-minded people</li>
+            </ul>
         </div>
         <img src="assets/images/the-work-that-reconnects.jpg" alt="People at the workshop" class="wks-image1">
     </section>
