Fixed the Home page

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             </ul>
         </nav>  
     </header>
-    <section>
+    <section id="hero-outer">
         <div id="hero-image">
         <div id="cover-text">
-            <h3>“Knowing that you love the earth changes you, activates you to defend and protect and celebrate. But when you feel that the earth loves you in return,
-                that feeling transforms the relationship from a one-way street into a sacred bond.” ― Robin Wall Kimmerer, Bradining Sweetgrass</h3>
+            <h3>“Knowing that you love the earth changes you, activates you to defend and protect and celebrate. But when you feel that the earth loves you
+                 in return, that feeling transforms the relationship from a one-way street into a sacred bond.” ― Robin Wall Kimmerer, Bradining Sweetgrass</h3>
         </div>
     </div>
     </section>
@@ -43,19 +43,17 @@
         <hr>
         <h2 class="meet">Meet Alexandra</h2>
               <hr>
-        <span>
+        <div id="bio-container">
         <div id="right-bio">
-            <div class="right-bio-text">
              <p>Alexandra Brinzac is a being that journeys through life with an open heart and a deep love for all that is moving. Her background is a BA in psychology, with 
                   a master degree in experiential psychotherapy. During her last 4 years, her journey was paved with linking psychology and ecopsychology together. Therefore,
                   you can find her hosting climate circles, deep ecology and The Work That Reconnects workshops and gathering people for forest bathing sessions.
              </p>
-           </div>
         </div>
             <div id="left-bio">
              <img class="alexandra" src="assets/images/alexandra3.jpg" alt="Alexandra Brinzac">
            </div>
-        </span>
+        </div>
     </section>
     <section id="testimonials">
         <hr>
@@ -81,12 +79,16 @@
               <hr>
         <h2 class="meet">Meet-up Times</h2>
               <hr>
-        <span id="meet-up-times">
+        <div id="meet-up-times">
+            <div id="meet-up-img">
            <img src="assets/images/girl-hugging-tree.jpg" alt="Girl hugging tree" class="animate">
             <img src="assets/images/hands-plant.jpg" alt="Hands through plants" class="animate">
             <img class="forest" src="assets/images/forest3.jpg" alt="Small waterfall in the forest" class="animate">
+            </div>
+            <div id="meet-up-text">
             <div id="meet-up-reconnect">
-                <h2>The Work That Reconnects</h2>
+                <h2>The Work</h2>
+                <h2>That Reconnects</h2>
                 <h3>When: Tuesday 18:00</h3>
                 <h3>Location: The Legacy Bucharest</h3>
             </div>
@@ -100,7 +102,8 @@
                 <h3>When: Saturday 12:00</h3>
                 <h3>Location: Baneasa Forest</h3>
             </div>
-        </span>
+            </div>
+        </div>
 
     </section>
     <footer>
