Fixed the about page

--- a/about.html
+++ b/about.html
@@ -32,7 +32,6 @@
         </nav>  
     </header>
     <section class="about-workshops">
-        <div class="about">
             <img src="assets/images/hands.jpg" alt="Hands touching">
             <div class="inner-container">
                 <h1>About The Workshops</h1>
@@ -41,25 +40,24 @@
                     Discover more about the worshops and see what fits your needs and what calls your heart.
             </p>
             <div class="skills">
-                <span><a href="#workshop1">The Work That Reconnects</a></span>
-                <span><a href="#workshop2">CLimate Circles</a></span>
-                <span><a href="#workshop3">Forest Bathing</a></span>
+                <button><a href="#workshop1">The Work That Reconnects</a></button>
+                <button><a href="#workshop2">CLimate Circles</a></button>
+                <button><a href="#workshop3">Forest Bathing</a></button>
             </div>
-        </div>
     </section>
     <section id="workshop1">
-        <h2 class="reconnect-title">The Work That Reconnects</h2>
-        <div class="wks-container1">
-            <h3>About</h3>
-            <p>
+        <h2>The Work That Reconnects</h2>
+        <div class="wks-container">
+            <h3 class="description-titles">About</h3>
+            <p class="description">
                 Since 1978, The Work That Reconnects has inspired millions of people to listen to their hearts and work together for a better life on Earth, despite the general
                  trend of worsening ecological conditions. To learn the basics of The Work That Reconnects and its unique approach, people participate in experiences of varying
                  duration, from a few days to a few weeks. But, The Work That Reconnects extends far beyond these dedicated frameworks. The methods are widely used in schools,
                  communities, organizations and campaigns for the environment and human rights.
                  The central purpose of this work is to bring people into relationship with the world around them, empowering them to act and take part in "The Great Turning".
                 </p>
-            <h3>Benefits</h3>
-            <ul>
+            <h3 class="description-titles">Benefits</h3>
+            <ul class="description">
                 <li>A safe container to express and feel your feeling in regard to what is happening in the world</li>
                 <li>Finding new tools and practices that can help you in day to day life and in your relationships, communities and work life</li>
                 <li>Gaining new perspectives about the cultureship that is needed in this world</li>
@@ -67,19 +65,19 @@
                 <li>Building a strong network and creating a community of like-minded people</li>
             </ul>
         </div>
-        <img src="assets/images/the-work-that-reconnects.jpg" alt="People at the workshop" class="wks-image1">
+        <img src="assets/images/fa371392-3be7-4939-b124-7c579b17208f.JPG" alt="People at the workshop" class="wks-image">
     </section>
     <section id="workshop2">
-        <h2 class="climate-title">Climate Circles</h2>
-        <img src="assets/images/climate-circles.JPG" alt="People at the workshop2" class="wks-image2">
-        <div class="wks-container2">
-            <h3>About</h3>
-            <p>
+        <h2>Climate Circles</h2>
+        <img src="assets/images/climate-circles.JPG" alt="People at the workshop2" class="wks-image">
+        <div class="wks-container">
+            <h3 class="description-titles">About</h3>
+            <p class="description">
                 A Climate Circle is a safe & empathetic space where you can express your feelings regarding the climate & ecological crisis, while exploring your inner responses and
                  discovering your role in the Great Turning.
             </p>
-            <h3>Benefits</h3>
-           <ul>
+            <h3 class="description-titles">Benefits</h3>
+           <ul class="description">
               <li>As the danger of climate crisis to our safety and health is becoming more and more clear, we increasingly need to talk about how this changes are impacting us</li>
               <li>Normalizing and validating your feelings that may be too taboo and hard to express</li>
               <li>Being part of a circle where you can feel seen & heard and with whom you can share similar values and enrich your perspectives and hope</li>
@@ -90,15 +88,15 @@
         </div>
     </section>
     <section id="workshop3">
-        <h2 class="forest-title">Forest Bathing</h2>
-        <div class="wks-container3">
-            <h3>About</h3>
-            <p>Forest Bathing is the English translation of the Japanese term “shinrin yoku” (shinrin=forest and yoku=bath). It is the practice of experiencing natural spaces, 
+        <h2>Forest Bathing</h2>
+        <div class="wks-container">
+            <h3 class="description-titles">About</h3>
+            <p class="description">Forest Bathing is the English translation of the Japanese term “shinrin yoku” (shinrin=forest and yoku=bath). It is the practice of experiencing natural spaces, 
                 especially forests, in a slow, purposeful manner. Forest Bathing was developed in 1980s, and it has become an increasingly important part of Japanese preventive care and therapeutic healing, becoming an antidote
                 to our unnatural, indoor lives. Participants engage all their senses, paying attention to what is happening inside them, outside and how this worlds meet and interact. 
                 </p>
-            <h3>Benefits</h3>
-            <ul>
+            <h3 class="description-titles">Benefits</h3>
+            <ul class="description">
                 <li>Strenghtens the Immune System</li>
                 <li>Reduce stress levels</li>
                 <li>Supports healthy blood pressure levels</li>
@@ -110,7 +108,7 @@
                 <li>Reduction in asthma and eczema</li>
             </ul>
         </div>
-        <img src="assets/images/hands-tree.jpg" alt="Hands hugging tree" class="wks-image3">
+        <img src="assets/images/hands-tree.jpg" alt="Hands hugging tree" class="wks-image">
     </section>
     <footer>
         <div class="footer-container">
