Set media queries for the home page

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
         <div class="footer-container">
             <div class="left-col">
                 <h4>Contact Info</h4>
-                <p>Email: alexandra.brinzac@gmail.com</p>
+                <p>Email: alexandra.br@gmail.com</p>
                 <p>Telephone: 07432134322</p>
             </div> 
             <div class="right-col">
