--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <div id="header">
         <a href="index.html">
                <div id="logo">
                 <img src="assets/images/logo1.png" alt="Climate Circles logo">
@@ -29,7 +30,8 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
-        </nav>  
+        </nav>
+    </div>
     </header>
     <section id="hero-outer">
         <div id="hero-image">
@@ -110,7 +112,7 @@
         <div class="footer-container">
             <div class="left-col">
                 <h4>Contact Info</h4>
-                <p>Email: alexandra.brinzac@gmail.com</p>
+                <p>Email: alexandra.br@gmail.com</p>
                 <p>Telephone: 07432134322</p>
             </div> 
             <div class="right-col">
