Set media queries for about page and contact page

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <div id="header">
         <a href="index.html">
                <div id="logo">
                 <img src="assets/images/logo1.png" alt="Climate Circles logo">
@@ -29,11 +30,12 @@
                     <a href="index.html" >Home</a>
                 </li>
             </ul>
-        </nav>  
+        </nav>
+        </div>  
     </header>
-    <section class="about-workshops">
-            <img src="assets/images/hands.jpg" alt="Hands touching">
-            <div class="inner-container">
+    <section id="about-workshops">
+            <div id="background-image">
+            <div id="inner-container" class="box">
                 <h1>About The Workshops</h1>
                 <p class="text">
                     The workshops are created like an experience for you to dwell deeper into the relationship with yourself, with the other humans, with the Earth and all its beings. 
@@ -44,10 +46,12 @@
                 <button><a href="#workshop2">CLimate Circles</a></button>
                 <button><a href="#workshop3">Forest Bathing</a></button>
             </div>
+            </div>
     </section>
     <section id="workshop1">
-        <h2>The Work That Reconnects</h2>
-        <div class="wks-container">
+        <div id="wks-image">
+            <h2 class="wks-title">The Work That<br>Reconnects</h2>
+            <div class="wks-container">
             <h3 class="description-titles">About</h3>
             <p class="description">
                 Since 1978, The Work That Reconnects has inspired millions of people to listen to their hearts and work together for a better life on Earth, despite the general
@@ -65,12 +69,13 @@
                 <li>Building a strong network and creating a community of like-minded people</li>
             </ul>
         </div>
-        <img src="assets/images/fa371392-3be7-4939-b124-7c579b17208f.JPG" alt="People at the workshop" class="wks-image">
+        </div>
+       
     </section>
     <section id="workshop2">
-        <h2>Climate Circles</h2>
-        <img src="assets/images/climate-circles.JPG" alt="People at the workshop2" class="wks-image">
-        <div class="wks-container">
+        <div id="wks-image2">
+            <h2 class="wks-title">Climate Circles</h2>
+        <div class="wks-container2">
             <h3 class="description-titles">About</h3>
             <p class="description">
                 A Climate Circle is a safe & empathetic space where you can express your feelings regarding the climate & ecological crisis, while exploring your inner responses and
@@ -86,9 +91,11 @@
               <li>You can discover somatic and mindfulness practices that help you maintain and enrich your resilience</li>
            </ul>
         </div>
+        </div>
     </section>
     <section id="workshop3">
-        <h2>Forest Bathing</h2>
+        <div id="wks-image">
+            <h2 class="wks-title">Forest Bathing</h2>
         <div class="wks-container">
             <h3 class="description-titles">About</h3>
             <p class="description">Forest Bathing is the English translation of the Japanese term “shinrin yoku” (shinrin=forest and yoku=bath). It is the practice of experiencing natural spaces, 
@@ -108,7 +115,7 @@
                 <li>Reduction in asthma and eczema</li>
             </ul>
         </div>
-        <img src="assets/images/hands-tree.jpg" alt="Hands hugging tree" class="wks-image">
+        </div>
     </section>
     <footer>
         <div class="footer-container">
