--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <div id="header">
         <a href="index.html">
                <div id="logo">
                 <img src="assets/images/logo1.png" alt="Climate Circles logo">
@@ -29,7 +30,8 @@
                     <a href="index.html">Home</a>
                 </li>
             </ul>
-        </nav>  
+        </nav>
+    </div>
     </header>
     <section class="form-section">
         <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form">
